# embroiderly

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.json  .markdownlint-cli2.jsonc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CONTEXT_MAP.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALLATION.md  Justfile  README.md  VISION.md  clippy.toml  eslint.config.js  index.html  lint-staged.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.node.json  ui.config.ts  vite.config.ts
app/src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json5
app/src-tauri/binaries/: embroiderly_image-x86_64-unknown-linux-gnu
app/src-tauri/bundle/windows/: installer.nsi
app/src-tauri/capabilities/: main.json
app/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/core/: history.rs  history.test.rs  pattern_manager.rs  pattern_manager.test.rs
app/src-tauri/src/plugins/: mod.rs
app/src-tauri/src/services/: logger.rs
app/src-tauri/src/sidecars/: image.rs  mod.rs  publish.rs
app/src-tauri/src/startup/: auto_save.rs  file_associations.rs  mod.rs  open_on_startup.rs  patterns.rs  webview.rs
app/src-tauri/src/utils/: base64.rs  fonts.rs  mod.rs  palette.rs  path.rs  settings.rs
app/src-tauri/tests/: display.rs  fabric.rs  grid.rs  history.rs  layers.rs  palette.rs  pattern.rs  pattern_io.rs  publish.rs  stitches.rs
app/src-tauri/tests/common/: mod.rs
app/src-tauri/tests/utils/: ipc.rs  mod.rs  pattern.rs  setup.rs
app/src-wasm/: Cargo.toml  README.md
app/src-wasm/src/: editor_wrapper.rs  error.rs  file_manager.rs  lib.rs  logger.rs  persistence_manager.rs
app/src-wasm/src/web/: idb.rs  mod.rs  net.rs  opfs.rs
crates/embroiderly/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json5
crates/embroiderly-editor/: Cargo.toml  README.md
crates/embroiderly-editor/src/: editor.rs  editor.test.rs  error.rs  event.rs  history.rs  history.test.rs  lib.rs
crates/embroiderly-editor/src/actions/: display.rs  display.test.rs  fabric.rs  fabric.test.rs  grid.rs  grid.test.rs  image.rs  image.test.rs  layers.rs  layers.test.rs  mod.rs  palette.rs  palette.test.rs  pattern.rs  pattern.test.rs  publish.rs  publish.test.rs  stitches.rs  stitches.test.rs
crates/embroiderly-export/: Cargo.toml
crates/embroiderly-export/src/: error.rs  lib.rs  main.rs  pdf.rs  svg.rs  svg.test.rs
crates/embroiderly-export/templates/: pattern.typ
crates/embroiderly-image/: Cargo.toml
crates/embroiderly-image/src/: error.rs  import.rs  lib.rs  logger.rs  main.rs  svg.rs  svg.test.rs
crates/embroiderly-image/src/commands/: import.rs
crates/embroiderly-image/src/core/: svg.rs  svg.test.rs
crates/embroiderly-image/src/export/: svg.rs
crates/embroiderly-image/src/imageproc/: mod.rs  pyramid.rs
crates/embroiderly-image/src/import/: convert.rs  mod.rs  preview.rs
crates/embroiderly-logger/: Cargo.toml
crates/embroiderly-logger/src/: lib.rs
crates/embroiderly-parsers/: Cargo.toml  README.md
crates/embroiderly-parsers/src/: embproj.rs  error.rs  format.rs  lib.rs  oxs.rs  oxs.test.rs  xsd.rs
crates/embroiderly-parsers/src/embproj/: display_settings.rs  display_settings.test.rs  publish_settings.rs  publish_settings.test.rs  reference_image_settings.rs  reference_image_settings.test.rs
crates/embroiderly-parsers/src/pmaker/: mod.rs  palette.rs  xsd.rs  xsd.test.rs
crates/embroiderly-parsers/src/ursa/: palette.rs
crates/embroiderly-parsers/src/utils/: mod.rs  xml.rs
crates/embroiderly-parsers/src/xspro/: mod.rs  palette.rs
crates/embroiderly-parsers/tests/: palettes.rs  patterns.rs
crates/embroiderly-pattern/: CONTEXT.md  Cargo.toml  README.md
crates/embroiderly-pattern/src/: display.rs  image.rs  layer.rs  layer.test.rs  layers.rs  layers.test.rs  lib.rs  palette.rs  palette.test.rs  pattern.rs  pattern.test.rs  project.rs  project.test.rs  publish.rs  stitches.rs  stitches.test.rs
crates/embroiderly-pattern/src/stitches/: fullstitch.rs  line.rs  node.rs  partstitch.rs  special.rs
crates/embroiderly-publish/: Cargo.toml
crates/embroiderly-publish/src/: error.rs  format.rs  lib.rs  logger.rs  main.rs  pdf.rs  svg.rs  svg.test.rs  telemetry.rs
crates/embroiderly-publish/templates/: pattern.typ
crates/embroiderly-tracing/: Cargo.toml
crates/embroiderly-tracing/src/: lib.rs
crates/embroiderly-web/: Cargo.toml  README.md
crates/embroiderly-web/src/: error.rs  idb.rs  lib.rs  net.rs  opfs.rs  timers.rs
crates/embroiderly/binaries/: README.md
crates/embroiderly/bundle/windows/: README.md  installer.nsi
crates/embroiderly/capabilities/: main.json
crates/embroiderly/src/: error.rs  lib.rs  logger.rs  state.rs  telemetry.rs
crates/embroiderly/tests/: pattern.rs
crates/tauri-plugin-posthog/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js
crates/tauri-plugin-posthog/guest-js/: index.ts
crates/tauri-plugin-posthog/permissions/: default.toml
crates/tauri-plugin-posthog/src/: commands.rs  config.rs  lib.rs  utils.rs
crates/tauri-plugin-sentry/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
crates/tauri-plugin-sentry/guest-js/: commands.ts  index.ts
crates/tauri-plugin-sentry/permissions/: default.toml
crates/tauri-plugin-sentry/src/: commands.rs  lib.rs
crates/xsp-parsers/: Cargo.toml  README.md
crates/xsp-parsers/tests/: patterns.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundle/windows/: installer.nsi
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  prevent_default.rs  state.rs
src-tauri/src/commands/: display.rs  fabric.rs  fonts.rs  grid.rs  history.rs  mod.rs  palette.rs  pattern.rs  stitches.rs
src-tauri/src/core/: history.rs  mod.rs  pattern_manager.rs  pattern_manager.test.rs
src-tauri/src/utils/: path.rs
src-tauri/templates/: pattern.typ
src-tauri/tests/: pattern.rs
(+990 files in other folders)
