[workspace]
resolver = "3"
members = ["app/src-tauri/", "app/src-wasm/", "crates/*", "packages/pdf-export/src-wasm/"]

[workspace.package]
edition = "2024"

[profile.dev]
debug = "line-tables-only"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = "limited"
strip = "debuginfo"
split-debuginfo = "packed"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
explicit_iter_loop = "allow"
float_cmp = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
single_char_pattern = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"

restriction = { level = "allow", priority = -1 }
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
semicolon_inside_block = "warn"
todo = "warn"
unused_trait_names = "warn"

nursery = { level = "warn", priority = -1 }
large_stack_frames = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
significant_drop_tightening = "allow"

cargo = { level = "allow", priority = -1 }
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

[workspace.dependencies]
# Tauri
tauri = { version = "2.10.3", default-features = false, features = ["compression", "wry", "x11", "config-json5"] }
tauri-build = { version = "2.4.1", default-features = false, features = ["config-json5"] }
## Official Tauri plugins
tauri-plugin-fs = "2.0.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
## Third-party Tauri plugins
tauri-plugin-prevent-default = "5.0.0"

# Embroiderly Core
embroiderly_editor = { path = "crates/embroiderly-editor" }
embroiderly_image = { path = "crates/embroiderly-image" }
embroiderly_parsers = { path = "crates/embroiderly-parsers" }
embroiderly_pattern = { path = "crates/embroiderly-pattern" }
embroiderly_tracing = { path = "crates/embroiderly-tracing" }
xsp_parsers = { path = "crates/xsp-parsers" }

# Async runtime
futures = "0.3.32"

# Parsing pattern files
byteorder = "1.5.0"
encoding_rs = "0.8.35"
hex = "0.4.3"
quick-xml = "0.39.2"

# Fonts handling
ttf-parser = "0.25.1"

# Typst
typst = "0.14.2"
typst-pdf = "0.14.2"
## Third-party Typst libraries
typst-as-lib = "0.15.4"

# Image processing
image = "0.25.10"
palette = "0.7.6"
quantette = "0.5.1"

# Archiving
zip = { version = "8.5.1", default-features = false, features = ["deflate", "time"] }

# De/serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde-wasm-bindgen = "0.6.5"
borsh = { version = "1.6.1", features = ["derive"] }

# CLI
argh = { version = "0.1.18", default-features = false }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging & Tracing
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-panic = "0.1.2"

# Identification
uuid = { version = "1.23.1", features = ["v4", "v7", "js"] }

# Wasm
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.4.0"
indexed-db = "0.4.2"
js-sys = "0.3.95"
web-sys = "0.3.95"

# Iterator utilities
itertools = "0.14.0"

# Testing utilities
rstest = "0.26.1"

# Other
alphanumeric-sort = "1.5.6"
ordered-float = "5.2.0"
paste = "1.0.15"
prettydiff = { version = "0.9.0", default-features = false }
rand = "0.10.1"
