[package]
name = "embroiderly"
edition = "2024"

[features]
test = []

[profile.release]
opt-level = "s"
lto = true
debug = "limited"
strip = "debuginfo"
split-debuginfo = "packed"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.5.1", features = ["test"] }
## Official plugins
tauri-plugin-dialog = "2.0.5"
tauri-plugin-fs = "2.0.3"
tauri-plugin-log = "2.4.0"
tauri-plugin-opener = "2.2.6"
## Third-party plugins
tauri-plugin-prevent-default = "2.1.0"

# Parsing
xsp-parsers = { git = "https://github.com/embroidery-space/xsp-parsers.git", rev = "35519da49ecdefa720581db97849dca52e3200e0" }
quick-xml = "0.37.5"

# Archiving
zip = { version = "2.6.1", features = [
  "zstd",
  "time",
], default-features = false }
zip-extract = { version = "0.3.0", features = [
  "zstd",
  "time",
], default-features = false }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
borsh = { version = "1.5.7", features = ["derive"] }
base64 = "0.22.1"

# Error handling
anyhow = "1.0.98"

# Logging
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

# Other
ordered-float = { version = "5.0.0", features = ["borsh"] }
dyn-clone = "1.0.19"
tempfile = "3.20.0"
convert_case = "0.8.0"

[dev-dependencies]
rand = "0.9.1"
