[package]
name = "embroiderly"
edition = { workspace = true }

[lints]
workspace = true

[features]
test = []

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true, features = ["test"] }
## Official plugins
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
## Third-party plugins
tauri-plugin-better-posthog = { workspace = true }
tauri-plugin-prevent-default = { workspace = true }
tauri-plugin-pinia = { workspace = true }

# Embroiderly Core
embroiderly_image = { workspace = true }
embroiderly_parsers = { workspace = true }
embroiderly_pattern = { workspace = true, features = ["borsh", "serde"] }
embroiderly_tracing = { workspace = true }
xsp_parsers = { workspace = true }

# Fonts parsing
font-kit = { workspace = true }
ttf-parser = { workspace = true }
encoding_rs = { workspace = true }

# Image processing
image = { workspace = true }

# De/serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging & Tracing
log = { workspace = true }
tracing = { workspace = true }

# Telemetry
better-posthog = { workspace = true }
sentry = { workspace = true }

# File system utilities
tempfile = { workspace = true }
walkdir = { workspace = true }

# Other
async-trait = { workspace = true }
dyn-clone = { workspace = true }
uuid = { workspace = true, features = ["borsh", "serde"] }
rayon = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rstest = { workspace = true }
