[package]
name = "embroiderly"
edition = { workspace = true }

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true, features = ["test"] }
## Official plugins
tauri-plugin-fs = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
## Third-party plugins
tauri-plugin-prevent-default = { workspace = true }

# Embroiderly core
embroiderly_tracing = { workspace = true }

# De/serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging & Tracing
log = { workspace = true }
tracing = { workspace = true }
