[package]
name = "embroiderly-export"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5.40", features = ["derive"] }

# Embroiderly Core
embroiderly-parsers = { path = "../embroiderly-parsers" }
embroiderly-pattern = { path = "../embroiderly-pattern" }

# Exporting patterns to PDF
typst = "0.13.1"
typst-pdf = "0.13.1"
## Third-party Typst libraries
typst-as-lib = { version = "0.14.4", features = ["typst-kit-fonts"] }

# Exporting patterns to image formats
quick-xml = "0.37.5" # For writing SVG.

# Logging
log = "0.4.27"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"
