[package]
name = "embroiderly_image"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# CLI
argh = { workspace = true }

# Embroiderly Core
embroiderly_pattern = { workspace = true, features = ["borsh", "serde"] }
embroiderly_tracing = { workspace = true }

# De/serialization
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Writing SVG files
quick-xml = { workspace = true }

# Image processing
image = { workspace = true }
palette = { workspace = true }
quantette = { workspace = true }

# Tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Other
ordered-float = { workspace = true }

[dev-dependencies]
embroiderly_parsers = { workspace = true }
prettydiff = { workspace = true }
