[package]
name = "embroiderly_image"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# Embroiderly Core
embroiderly_pattern = { workspace = true, features = ["borsh"] }

# Writing SVG files
quick-xml = { workspace = true }

# Tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
embroiderly_parsers = { workspace = true }
prettydiff = { workspace = true }
