[package]
name = "embroiderly_logger"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# Logging
log = { workspace = true }
log-panics = { workspace = true }
fern = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time handling
time = { workspace = true }
