[package]
name = "embroiderly_parsers"
edition = { workspace = true }

[dependencies]
# Embroiderly Core
embroiderly_pattern = { workspace = true, features = ["borsh", "serde"] }

# Parsing pattern files
xsp_parsers = { workspace = true }
quick-xml = { workspace = true }

# Archiving
zip = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Other
tempfile = { workspace = true }

[dev-dependencies]
prettydiff = { workspace = true }
