[package]
name = "embroiderly_parsers"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# Embroiderly Core
embroiderly_pattern = { workspace = true, features = ["serde"] }
xsp_parsers = { workspace = true }

# Parsing pattern files
quick-xml = { workspace = true }
serde_json = { workspace = true }

# Archiving
zip = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Other
tempfile = { workspace = true }

[dev-dependencies]
prettydiff = { workspace = true }
