[package]
name = "embroiderly_parsers"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# Embroiderly Core
embroiderly_pattern = { workspace = true, features = ["serde"] }

# Parsing pattern files
quick-xml = { workspace = true }
serde_json = { workspace = true }

# Binary reading
byteorder = { workspace = true }
encoding_rs = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }

# Archiving
zip = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
paste = { workspace = true }
prettydiff = { workspace = true }
