[package]
name = "embroiderly-pattern"
edition = { workspace = true }

[features]
borsh = ["dep:borsh", "uuid/borsh", "ordered-float/borsh"]
serde = ["dep:serde", "uuid/serde"]

[dependencies]
# De/serialization
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# Logging
log = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Embroiderly Core
xsp-parsers = { workspace = true }

# Other
ordered-float = { workspace = true }
uuid = { workspace = true }
