[package]
name = "embroiderly_pattern"
edition = { workspace = true }

[lints]
workspace = true

[features]
borsh = ["dep:borsh", "uuid/borsh", "ordered-float/borsh"]
serde = ["dep:serde", "uuid/serde", "ordered-float/serde"]

[dependencies]
# De/serialization
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# Image processing
image = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Other
alphanumeric-sort = { workspace = true }
ordered-float = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
