[package]
name = "embroiderly_publish"
edition = { workspace = true }

[dependencies]
# CLI
clap = { workspace = true }

# Embroiderly Core
embroiderly-image = { workspace = true }
embroiderly-parsers = { workspace = true }
embroiderly-pattern = { workspace = true }
embroiderly-logger = { workspace = true }

# De/serialization
serde_json = { workspace = true }

# Exporting patterns to PDF
typst = { workspace = true }
typst-pdf = { workspace = true }
## Third-party Typst libraries
typst-as-lib = { workspace = true, features = ["typst-kit-fonts"] }

# Logging
log = { workspace = true }

# Telemetry
sentry = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
