[package]
name = "embroiderly_publish"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# CLI
argh = { workspace = true }

# Embroiderly Core
embroiderly_image = { workspace = true }
embroiderly_parsers = { workspace = true }
embroiderly_pattern = { workspace = true }
embroiderly_tracing = { workspace = true }

# De/serialization
serde_json = { workspace = true }

# Exporting patterns to PDF
typst = { workspace = true }
typst-pdf = { workspace = true }
## Third-party Typst libraries
typst-as-lib = { workspace = true, features = ["typst-kit-fonts"] }

# Tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
