[package]
name = "embroiderly_tracing"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-panic = { workspace = true }

# Error Handling
anyhow = { workspace = true }
