[package]
name = "embroiderly"
edition = "2024"

[features]
test = []

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.5.1", features = ["test", "config-json5"] }
## Official plugins
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.0.5"
tauri-plugin-fs = "2.0.3"
tauri-plugin-log = "2.4.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-os = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-updater = "2.7.1"
## Third-party plugins
tauri-plugin-prevent-default = "2.1.1"
tauri-plugin-pinia = "3.6.0"

# Embroiderly Core
embroiderly-parsers = { path = "../embroiderly-parsers" }
embroiderly-pattern = { path = "../embroiderly-pattern", features = [
  "borsh",
  "serde",
] }

# Parsing pattern files
xsp-parsers = { git = "https://github.com/embroidery-space/xsp-parsers.git", rev = "ae67e88891bade1437daaad1fbaee62600ef5f7e" }
quick-xml = "0.37.5"

# Exporting patterns to PDF
typst = "0.13.1"
typst-pdf = "0.13.1"
## Third-party Typst libraries
typst-as-lib = "0.14.4"

# Archiving
zip = { version = "4.0.0", features = [
  "zstd",
  "time",
], default-features = false }
zip-extract = { version = "0.4.0", features = [
  "zstd",
  "time",
], default-features = false }

# De/serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
borsh = { version = "1.5.7", features = ["derive"] }
base64 = "0.22.1"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Logging
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

# Other
ordered-float = { version = "5.0.0", features = ["borsh"] }
dyn-clone = "1.0.19"
tempfile = "3.20.0"
convert_case = "0.8.0"
uuid = { version = "1.17.0", features = ["v4", "serde", "borsh"] }

[dev-dependencies]
rand = "0.9.1"
