[package]
name = "embroiderly"
edition = { workspace = true }

[features]
test = []

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true, features = ["test"] }
## Official plugins
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
## Third-party plugins
tauri-plugin-prevent-default = { workspace = true }
tauri-plugin-pinia = { workspace = true }

# Embroiderly Core
embroiderly-parsers = { workspace = true }
embroiderly-pattern = { workspace = true, features = ["borsh", "serde"] }

# Image processing
image = { workspace = true }

# De/serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
log-panics = { workspace = true }

# Other
dyn-clone = { workspace = true }
tempfile = { workspace = true }
convert_case = { workspace = true }
uuid = { workspace = true, features = ["borsh", "serde"] }

[dev-dependencies]
rand = { workspace = true }
